<resources>
    <string name="app_name">Nextoque</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="iniciar_sessao">Iniciar Sessão</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="registrar">Registrar</string>
    <string name="foto_do_produto">Foto do produto</string>
    <string name="menu_de_acoes_do_produto">Menu de ações do produto</string>
    <string name="tipo_usuario">Tipo Usuário</string>
    <string name="retirar">Retirar</string>
    <string name="devolver">Devolver</string>
    <string name="alterar">Alterar</string>
    <string name="ver_estoque">Ver Estoque</string>
    <string name="salvar">Salvar</string>
    <string name="toque_para_digitar">Toque para digitar…</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="ultimas_acoes">Últimas Ações</string>
    <string name="liberar_acessos">Liberar Acessos</string>
    <string name="login">Login</string>
    <string name="title_activity_dash">DashActivity</string>
    <string name="dashboard">Dashboard</string>
    <string name="acoes">Ações</string>
    <string name="estoque">Estoque</string>
    <string name="listar_produtos">Listar Produtos</string>
    <string name="novo_produto">Novo Produto</string>
    <string name="produto">Produto</string>
    <string name="retiradas_pendentes">Retiradas Pendentes</string>
    <string name="total">Total</string>
    <string name="descricao">Descrição</string>
    <string name="categoria">Categoria</string>
    <string name="listar_obras">Listar Obras</string>
    <string name="nova_obra">Nova Obra</string>
    <string name="encerrar_sessao">Encerrar Sessão</string>
</resources>