<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_dashboard"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_baseline_speed_24"
            android:title="@string/dashboard" />
    </group>

    <item android:title="@string/estoque" android:id="@+id/aaaa">
        <menu>
            <group
                android:id="@+id/group_estoque"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_retirar"
                    android:icon="@drawable/ic_retirar"
                    android:title="@string/retirar" />

                <item
                    android:id="@+id/nav_devolver"
                    android:icon="@drawable/ic_devolver"
                    android:title="@string/devolver" />
            </group>
        </menu>
    </item>

    <item android:title="Gerenciamento" android:id="@+id/bbbbbb">
        <menu>
            <group
                android:id="@+id/group_gerenciamento"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_listar"
                    android:icon="@drawable/ic_baseline_list_24"
                    android:title="@string/listar_produtos" />

                <item
                    android:id="@+id/nav_novo"
                    android:icon="@drawable/ic_baseline_add_circle_outline_24"
                    android:title="@string/novo_produto" />

                <item
                    android:id="@+id/nav_liberar"
                    android:icon="@drawable/ic_liberar_acessos"
                    android:title="@string/liberar_acessos" />
            </group>
        </menu>

    </item>


</menu>