<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginFragment"
    android:gravity="center"
    android:background="#171717" >

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20pt"
        android:layout_marginEnd="20pt"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/e_mail"/>

    <EditText
        android:id="@+id/editTextSenha"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/senha"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/editTextUsername"
        android:layout_alignEnd="@id/editTextUsername"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_below="@id/editTextUsername"/>

    <Button
        android:id="@+id/buttonIniciarSessao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextSenha"
        android:layout_alignStart="@id/editTextSenha"
        android:layout_alignEnd="@id/editTextSenha"
        android:layout_centerInParent="true"
        android:layout_marginTop="20pt"
        android:background="@drawable/btn_border_radius"
        android:text="@string/iniciar_sessao"
        app:backgroundTint="@color/black"
        app:backgroundTintMode="add" />

    <Button
        android:id="@+id/buttonCriarConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonIniciarSessao"
        android:layout_alignStart="@id/buttonIniciarSessao"
        android:layout_alignEnd="@id/buttonIniciarSessao"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_border_radius"
        android:text="@string/criar_conta"
        app:backgroundTint="@color/black"
        app:backgroundTintMode="add" />

    <TextView
        android:id="@+id/textViewEsqueciASenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonCriarConta"
        android:layout_alignEnd="@id/buttonCriarConta"
        android:layout_marginTop="20pt"
        android:textColor="#FFAB00"
        android:text="@string/esqueci_minha_senha"/>

</RelativeLayout>