<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginFragment"
    android:gravity="center"
    android:background="@color/cinza_escuro">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/ic_logo_foreground" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/hints"
        app:hintTextColor="@color/hints"
        app:counterTextColor="@color/hints"
        android:textColorHint="@color/hints"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20pt"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20pt" >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/hints"
        app:hintTextColor="@color/hints"
        android:textColorHint="@color/hints"
        app:counterTextColor="@color/hints"
        android:hint="@string/senha"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/editTextUsername"
        android:layout_alignEnd="@id/editTextUsername"
        android:layout_below="@id/editTextUsername">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonIniciarSessao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextSenha"
        android:layout_alignStart="@id/editTextSenha"
        android:layout_alignEnd="@id/editTextSenha"
        android:layout_centerInParent="true"
        android:layout_marginTop="20pt"
        android:background="@drawable/btn_border_radius"
        android:text="@string/login"
        app:backgroundTint="@color/azul" />

    <Button
        android:id="@+id/buttonCriarConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonIniciarSessao"
        android:layout_alignStart="@id/buttonIniciarSessao"
        android:layout_alignEnd="@id/buttonIniciarSessao"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_border_radius"
        android:text="@string/criar_conta"
        app:backgroundTint="@color/azul" />

    <TextView
        android:id="@+id/textViewEsqueciASenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonCriarConta"
        android:layout_alignEnd="@id/buttonCriarConta"
        android:layout_marginTop="20pt"
        android:text="@string/esqueci_minha_senha"
        android:textColor="@color/vermelho" />

</RelativeLayout>