<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    tools:context=".DashboardFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_dashboard"
        android:padding="20dp"
        android:id="@+id/layout_dash_comum"
        android:gravity="center">


        <ImageButton
            android:id="@+id/imgBtnRetirar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/background_dashboard_card"
            android:src="@drawable/ic_retirar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgBtnRetirar"
                    android:layout_centerHorizontal="true"
                    android:labelFor="@id/imgBtnRetirar"
                    android:layout_alignStart="@id/imgBtnRetirar"
                    android:layout_alignEnd="@id/imgBtnRetirar"
                    android:gravity="center"
                    android:text="@string/retirar"
                    android:textColor="@color/white" />



                <ImageButton
                    android:id="@+id/imgBtnDevolver"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_toEndOf="@id/imgBtnRetirar"
                    android:layout_marginStart="50dp"
                    android:background="@drawable/background_dashboard_card"
                    android:src="@drawable/ic_devolver" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgBtnDevolver"
                    android:layout_centerHorizontal="true"
                    android:layout_alignStart="@id/imgBtnDevolver"
                    android:layout_alignEnd="@id/imgBtnDevolver"
                    android:gravity="center"
                    android:labelFor="@id/imgBtnDevolver"
                    android:text="@string/devolver"
                    android:textColor="@color/white" />


        <ImageButton
            android:id="@+id/imgBtnAlterar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@id/imgBtnRetirar"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:background="@drawable/background_dashboard_card"
            android:src="@drawable/ic_alterar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgBtnAlterar"
                    android:layout_centerHorizontal="true"
                    android:layout_alignStart="@id/imgBtnAlterar"
                    android:layout_alignEnd="@id/imgBtnAlterar"
                    android:gravity="center"
                    android:labelFor="@id/imgBtnAlterar"
                    android:text="@string/alterar"
                    android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/imgBtnCadastrar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@id/imgBtnDevolver"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="45dp"
            android:layout_toEndOf="@id/imgBtnAlterar"
            android:background="@drawable/background_dashboard_card"
            android:src="@drawable/ic_cadastrar_prod" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgBtnCadastrar"
                    android:layout_centerHorizontal="true"
                    android:layout_alignStart="@id/imgBtnCadastrar"
                    android:layout_alignEnd="@id/imgBtnCadastrar"
                    android:gravity="center"
                    android:labelFor="@id/imgBtnCadastrar"
                    android:text="@string/cadastrar"
                    android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/imgBtnVerEstoque"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@id/imgBtnAlterar"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:background="@drawable/background_dashboard_card"
            android:src="@drawable/ic_outline_storage_48" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgBtnVerEstoque"
            android:layout_centerHorizontal="true"
            android:layout_alignStart="@id/imgBtnVerEstoque"
            android:layout_alignEnd="@id/imgBtnVerEstoque"
            android:gravity="center"
            android:labelFor="@id/imgBtnVerEstoque"
            android:text="@string/ver_estoque"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/imgBtnUltimasAcoes"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@id/imgBtnCadastrar"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="45dp"
            android:layout_toEndOf="@id/imgBtnVerEstoque"
            android:background="@drawable/background_dashboard_card"
            android:src="@drawable/ic_ultimas_acoes" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgBtnUltimasAcoes"
            android:layout_alignStart="@id/imgBtnUltimasAcoes"
            android:layout_alignEnd="@id/imgBtnUltimasAcoes"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="105dp"
            android:gravity="center"
            android:labelFor="@id/imgBtnUltimasAcoes"
            android:text="@string/ultimas_acoes"
            android:textColor="@color/white" />
        </RelativeLayout>

    <RelativeLayout
        android:layout_marginBottom="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal">

        <ImageButton
            android:id="@+id/imgBtnLiberarAcessos"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/background_dashboard_card"
            android:backgroundTint="@color/vermelho"
            android:src="@drawable/ic_liberar_acessos"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgBtnLiberarAcessos"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:labelFor="@id/imgBtnLiberarAcessos"
            android:text="@string/liberar_acessos"
            android:textColor="@color/white" />
    </RelativeLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="15dp"
        android:src="@drawable/ic_baseline_arrow_back_24"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>